--- a/k8s-paas-infra/istio-1.0.3/install/kubernetes/istio-demo.yaml
+++ b/k8s-paas-infra/istio-1.0.3/install/kubernetes/istio-demo.yaml
@@ -12573,6 +12573,11 @@ spec:
       name: http2-grafana
       port: 15031
       targetPort: 15031
+    -
+      name: rtmp
+      nodePort: 31410
+      port: 1935
+      targetPort: 1935
 ---
 
 ---
